--- a/css/overallCSS.css
+++ b/css/overallCSS.css
@@ -27,7 +27,7 @@ h2{
 
 h4{
   font-size: 1rem;
-  padding: 1 rem;
+  padding: 1rem;
   font-weight: bold;
   padding-left: .5rem;
 }
@@ -52,7 +52,6 @@ p{
   display: inline-block;
   padding: 1rem;
 }
-
 
 #homebody {
   background-image: url(homebg.png);
@@ -87,6 +86,6 @@ p{
 #cyberbody {
   text-align: center;
   background-image: url(cyberbg.png);
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Roboto Mono',Courier, monospace;
   color: #f2f2f2;
 }
